custom scrollbar in single product fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -638,7 +638,7 @@ select:-webkit-autofill:active {
 }
 
 .delay__show{
-  animation: delayShow 0.6s;
+  animation: delayShow 0.4s;
 }
 
 @keyframes delayShow{
